gccida/c3/have_sub2_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/have_sub2_insn/src/optabs.c:4383:70: error: use of undeclared identifier 'insn_data_0'
&& insn_data_0[icode].operand->predicate( x, *( ( unsigned __int16 *)insn_data_0[icode].operand + 8)) 
                                                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/have_sub2_insn/src/optabs.c:4383:4: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
&& insn_data_0[icode].operand->predicate( x, *( ( unsigned __int16 *)insn_data_0[icode].operand + 8)) 
   ^~~~~~~~~~~
   insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/have_sub2_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/have_sub2_insn/src/optabs.c:4386:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int16 *)&insn_data_0[icode].operand[1] + 8)) 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/have_sub2_insn/src/optabs.c:4386:41: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
( machine_mode)*( ( unsigned __int16 *)&insn_data_0[icode].operand[1] + 8)) 
                                        ^~~~~~~~~~~
                                        insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/have_sub2_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/have_sub2_insn/src/optabs.c:4384:4: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
&& insn_data_0[icode].operand[1].predicate( 
   ^~~~~~~~~~~
   insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/have_sub2_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/have_sub2_insn/src/optabs.c:4389:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int16 *)&insn_data_0[icode].operand[2] + 8)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/have_sub2_insn/src/optabs.c:4389:41: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
( machine_mode)*( ( unsigned __int16 *)&insn_data_0[icode].operand[2] + 8)); 
                                        ^~~~~~~~~~~
                                        insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/have_sub2_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/have_sub2_insn/src/optabs.c:4387:4: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
&& insn_data_0[icode].operand[2].predicate( 
   ^~~~~~~~~~~
   insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/have_sub2_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/have_sub2_insn/src/obj/optabs.o] Error 1
